shaderc-bindings/shaderc_wrapper.h

typedef struct shaderc_compilation_result* shaderc_compilation_result_t;
// Compilation status
typedef enum {
    shaderc_compilation_status_success = 0,
    shaderc_compilation_status_invalid_stage = 1,
    shaderc_compilation_status_compilation_error = 2,
    shaderc_compilation_status_internal_error = 3,
    shaderc_compilation_status_null_result_object = 4,
    shaderc_compilation_status_invalid_assembly = 5,
    shaderc_compilation_status_validation_error = 6,
    shaderc_compilation_status_transformation_error = 7,
    shaderc_compilation_status_configuration_error = 8,
} shaderc_compilation_status;
size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result);
shaderc_compilation_status shaderc_result_get_compilation_status(const shaderc_compilation_result_t result);
const char* shaderc_result_get_bytes(const shaderc_compilation_result_t result);
const char* shaderc_result_get_error_message(const shaderc_compilation_result_t result);
// Utility functions
void shaderc_get_spv_version(unsigned int* version, unsigned int* revision);
int shaderc_parse_version_profile(const char* str, int* version, int* profile);