shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result)
     * }
     */
    public static long shaderc_result_get_num_errors(MemorySegment result) {
        var mh$ = shaderc_result_get_num_errors.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_num_errors", result);
            }
            return (long)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_compilation_status {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_compilation_status");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compilation_status shaderc_result_get_compilation_status(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_compilation_status$descriptor() {
        return shaderc_result_get_compilation_status.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compilation_status shaderc_result_get_compilation_status(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_compilation_status$handle() {
        return shaderc_result_get_compilation_status.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compilation_status shaderc_result_get_compilation_status(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_compilation_status$address() {
        return shaderc_result_get_compilation_status.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compilation_status shaderc_result_get_compilation_status(const shaderc_compilation_result_t result)
     * }
     */
    public static int shaderc_result_get_compilation_status(MemorySegment result) {
        var mh$ = shaderc_result_get_compilation_status.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_compilation_status", result);
            }
            return (int)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_bytes(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_bytes$descriptor() {
        return shaderc_result_get_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_bytes(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_bytes$handle() {
        return shaderc_result_get_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_bytes(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_bytes$address() {
        return shaderc_result_get_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *shaderc_result_get_bytes(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_bytes(MemorySegment result) {
        var mh$ = shaderc_result_get_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_bytes", result);
            }
            return (MemorySegment)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_error_message {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_error_message");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_error_message(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_error_message$descriptor() {
        return shaderc_result_get_error_message.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_error_message(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_error_message$handle() {
        return shaderc_result_get_error_message.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *shaderc_result_get_error_message(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_error_message$address() {
        return shaderc_result_get_error_message.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *shaderc_result_get_error_message(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_error_message(MemorySegment result) {
        var mh$ = shaderc_result_get_error_message.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_error_message", result);
            }
            return (MemorySegment)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_get_spv_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_get_spv_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_get_spv_version(unsigned int *version, unsigned int *revision)
     * }
     */
    public static FunctionDescriptor shaderc_get_spv_version$descriptor() {
        return shaderc_get_spv_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_get_spv_version(unsigned int *version, unsigned int *revision)
     * }
     */
    public static MethodHandle shaderc_get_spv_version$handle() {
        return shaderc_get_spv_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_get_spv_version(unsigned int *version, unsigned int *revision)
     * }
     */
    public static MemorySegment shaderc_get_spv_version$address() {
        return shaderc_get_spv_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_get_spv_version(unsigned int *version, unsigned int *revision)
     * }
     */
    public static void shaderc_get_spv_version(MemorySegment version, MemorySegment revision) {
        var mh$ = shaderc_get_spv_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_get_spv_version", version, revision);
            }
            mh$.invokeExact(version, revision);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_parse_version_profile {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_parse_version_profile");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int shaderc_parse_version_profile(const char *str, int *version, int *profile)
     * }
     */
    public static FunctionDescriptor shaderc_parse_version_profile$descriptor() {
        return shaderc_parse_version_profile.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int shaderc_parse_version_profile(const char *str, int *version, int *profile)
     * }
     */
    public static MethodHandle shaderc_parse_version_profile$handle() {
        return shaderc_parse_version_profile.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int shaderc_parse_version_profile(const char *str, int *version, int *profile)
     * }
     */
    public static MemorySegment shaderc_parse_version_profile$address() {
        return shaderc_parse_version_profile.ADDR;
    }
